<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.dynamicdata.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"

            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"


                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/Relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textview_signup_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="17sp"
                android:text="You idiot. Don't be stupid. Sign up" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/textview_signup_prompt">

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_username">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_email">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/edit_promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_promo_code"
                android:layout_below="@id/input_layout_password"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_promo_code"
                android:layout_centerHorizontal="true"
                android:text="@string/button_signup" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>